# hsh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: hsh.h
src/: hsh.c
tests/: test_parser.c
